# CactusC

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/codegen/: codegen.h
include/error_handler/: error_handler.h
include/lexer/: lexer.h  regex.h  token.h
include/parser/: astNode.h  parser.h  tokenstream.h
include/semantic_analysis/: semantic.h  symbol_table.h
include/utils/: read_file.h
samples/: cactus.cct  count.cct  factorial.cct  fibonacci.cct  lex_error.cct  log.cct  main.cct  or_example.cct  semantic_error.cct  simple.cct  syntax_error.cct
src/: main.c
src/codegen/: codegen.c
src/error_handler/: error_handler.c
src/lexer/: lexer-sample.c  lexer.c  regex.c  token.c
src/parser/: astNode.c  parser.c  tokenstream.c
src/semantic_analysis/: semantic.c  symbol_table.c
src/utils/: read_file.c
